--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>Vite + React</title>
   </head>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
-    *{
-      font-weight: 100;
-    }
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
   </style>
   <body>
     <div id="root"></div>
