--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Walter Germanes</title>
   </head>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
